--- a/src/components/todo/todo__categories/todo__categories.css
+++ b/src/components/todo/todo__categories/todo__categories.css
@@ -1,5 +1,5 @@
 .todo__categories{
-    margin-bottom: 20px;
+    /*margin-bottom: 20px;*/
     border: var(--todo_categories-border);
     transition: all 1s ease;
     padding: 3px;
