--- a/src/components/todo/todo__categories/todo__list_categories/todo__list_categories.css
+++ b/src/components/todo/todo__categories/todo__list_categories/todo__list_categories.css
@@ -1,5 +1,6 @@
 .todo__list_categories{
-    margin-top: 5px;
+    margin-top: 15px;
+    margin-bottom: 10px;
     display: flex;
     flex-wrap: wrap;
 }
