--- a/src/styles/root/root.css
+++ b/src/styles/root/root.css
@@ -1,6 +1,7 @@
 @import "nav_root.css";
 @import "todo_root.css";
 @import "pagination_root.css";
+@import "input_root.css";
 :root{
     --main_black-color: #1c1919;
     --main_white-color:#c4c2c2;
