--- a/src/styles/root/pagination_root.css
+++ b/src/styles/root/pagination_root.css
@@ -2,4 +2,7 @@
     --pagination_number-bg: var(--main_black-color);
     --pagination_number-color: #fff;
     --pagination_number-padding: 3px 5px;
+
+    --pagination_number_acitve-bg: #fff;
+    --pagination_number_acitve-color: var(--main_black-color) ;
 }
